[gd_scene load_steps=5 format=3 uid="uid://boruw2egswc06"]

[ext_resource type="Script" path="res://scenes/levels/main.gd" id="1_hs3mm"]
[ext_resource type="Texture2D" uid="uid://b3g32pusanrpc" path="res://assets/background_2.jpg" id="2_w7gvi"]
[ext_resource type="PackedScene" uid="uid://b6mnghfo6suy4" path="res://scenes/characters/printer.tscn" id="3_1spsq"]
[ext_resource type="PackedScene" uid="uid://cx75r1ol8584p" path="res://scenes/characters/hotbar_container.tscn" id="5_b2vkk"]

[node name="Main" type="Node2D"]
script = ExtResource("1_hs3mm")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(575, 328)
scale = Vector2(0.295049, 0.254902)
texture = ExtResource("2_w7gvi")

[node name="Printer" parent="." instance=ExtResource("3_1spsq")]
position = Vector2(231.999, 157)
scale = Vector2(1.07106, 0.941185)

[node name="Printer2" parent="." instance=ExtResource("3_1spsq")]
position = Vector2(334, 157)
scale = Vector2(1.07106, 0.941185)

[node name="Printer3" parent="." instance=ExtResource("3_1spsq")]
position = Vector2(436, 157)
scale = Vector2(1.07106, 0.941185)

[node name="Printer4" parent="." instance=ExtResource("3_1spsq")]
position = Vector2(535, 157)
scale = Vector2(1.07106, 0.941185)

[node name="Printer5" parent="." instance=ExtResource("3_1spsq")]
position = Vector2(632, 157)
scale = Vector2(1.07106, 0.941185)

[node name="Printer6" parent="." instance=ExtResource("3_1spsq")]
position = Vector2(728, 157)
scale = Vector2(1.07106, 0.941185)

[node name="HotbarContainer" parent="." instance=ExtResource("5_b2vkk")]

[node name="delete_item" parent="HotbarContainer/MarginContainer" index="0"]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 648)
offset_right = 40.0
offset_bottom = 40.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 648)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="left_button" type="Button" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(30, 90)
layout_mode = 2
size_flags_vertical = 4
text = "<"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 648)
offset_left = 1086.0
offset_right = 1152.0
offset_bottom = 648.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 648)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="right_button" type="Button" parent="VBoxContainer2/MarginContainer"]
custom_minimum_size = Vector2(30, 90)
layout_mode = 2
size_flags_vertical = 4
text = ">"

[node name="Button" type="Button" parent="."]
offset_left = 524.0
offset_top = 408.0
offset_right = 622.0
offset_bottom = 439.0
text = "Run Thread"

[connection signal="pressed" from="VBoxContainer/MarginContainer/left_button" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/MarginContainer/right_button" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_run_thread_pressed"]

[editable path="HotbarContainer"]
[editable path="HotbarContainer/MarginContainer/delete_item"]
